--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
             
             <div class="panel" style="flex: 1;">
+                <h1>magnet:?xt=urn:btih:3bee1fab19a40f0907280fe334f0de00695f6912</h1>
                 <h3 style="color: var(--main-cyan); font-size: 0.8rem; margin-top: 0;">ANKI / QUICK NOTES</h3>
                 <textarea id="notes" style="width: 100%; height: 80%; background: transparent; border: none; color: #ddd; outline: none; resize: none;" placeholder="今日待背单词..."></textarea>
             </div>
